<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">Randomness</string>

    <string name="comma">Comma</string>

    <string name="default_main_menu_card_description">$card_description</string>
    <string name="default_main_menu_card_name">$card_name</string>

    <string name="error">Error</string>

    <string name="format_range_int">%1$d - %2$d</string>
    <string name="format_range_string">%1$s - %2$s</string>

    <string name="flip_coin_name">Flip Coin</string>
    <string name="flip_coin_num_coins_label">Number of coins</string>
    <string name="flip_coin_settings_key">com.kenjitakahashirial.randomness.FLIP_COIN_SETTINGS</string>
    <string name="flip_coin_settings_title">Flip Coin Settings</string>

    <string name="generate_button">Go</string>

    <string name="hash">#</string>

    <string name="invalid_string">!@#$%^&amp;*</string>

    <string name="newline">Newline</string>

    <string name="magic_eight_ball_name">Magic Eight Ball</string>
    <string name="magic_eight_ball_result_maybe_0">Reply hazy, try again.</string>
    <string name="magic_eight_ball_result_maybe_1">Ask again later.</string>
    <string name="magic_eight_ball_result_maybe_2">Better not tell you now.</string>
    <string name="magic_eight_ball_result_maybe_3">Cannot predict now.</string>
    <string name="magic_eight_ball_result_maybe_4">Concentrate and ask again.</string>
    <string name="magic_eight_ball_result_no_0">Don&apos;t count on it.</string>
    <string name="magic_eight_ball_result_no_1">My reply is no.</string>
    <string name="magic_eight_ball_result_no_2">My sources say no.</string>
    <string name="magic_eight_ball_result_no_3">Outlook not so good.</string>
    <string name="magic_eight_ball_result_no_4">Very doubtful.</string>
    <string name="magic_eight_ball_result_yes_0">It is certain.</string>
    <string name="magic_eight_ball_result_yes_1">It is decidedly so.</string>
    <string name="magic_eight_ball_result_yes_2">Without a doubt.</string>
    <string name="magic_eight_ball_result_yes_3">Yes – definitely</string>
    <string name="magic_eight_ball_result_yes_4">You may rely on it.</string>
    <string name="magic_eight_ball_result_yes_5">As I see it, yes.</string>
    <string name="magic_eight_ball_result_yes_6">Most likely.</string>
    <string name="magic_eight_ball_result_yes_7">Outlook good.</string>
    <string name="magic_eight_ball_result_yes_8">Yes.</string>
    <string name="magic_eight_ball_result_yes_9">Signs point to yes.</string>
    <string name="magic_eight_ball_settings_key">com.kenjitakahashirial.randomness.MAGIC_EIGHT_BALL</string>
    <string name="magic_eight_ball_settings_shake">Shake to generate</string>
    <string name="magic_eight_ball_settings_title">Magic Eight Ball Settings</string>

    <string name="okay">Okay</string>

    <string name="random_color_from_label">Random Color From</string>
    <string name="random_color_name">Random Color</string>
    <string name="random_color_settings_key">com.kenjitakahashirial.randomness.RANDOM_COLOR_SETTINGS</string>
    <string name="random_color_settings_title">Random Color Settings</string>
    <string name="random_color_to_label">Random Color To</string>

    <string name="random_decimal_name">Random Decimal</string>
    <string name="random_decimal_places_label">Decimal places</string>
    <string name="random_decimal_settings_key">com.kenjitakahashirial.randomness.RANDOM_DECIMAL_SETTINGS</string>
    <string name="random_decimal_settings_show_trailing_zeros">Show trailing zeros</string>
    <string name="random_decimal_settings_title">Random Decimal Settings</string>

    <string name="random_integer_from_label">Random Integer From</string>
    <string name="random_integer_name">Random Integer</string>
    <string name="random_integer_settings_from_hint">Start value</string>
    <string name="random_integer_settings_key">com.kenjitakahashirial.randomness.RANDOM_INTEGER_SETTINGS</string>
    <string name="random_integer_settings_title">Random Integer Settings</string>
    <string name="random_integer_settings_to_hint">End value</string>
    <string name="random_integer_to_label">Random Integer To</string>

    <string name="random_settings_cancel">Cancel</string>
    <string name="random_settings_include_from">Include From</string>
    <string name="random_settings_include_to">Include To</string>
    <string name="random_settings_save">Save</string>

    <string name="random_word_name">Random Word</string>
    <string name="random_word_remaining">Words remaining:</string>
    <string name="random_word_settings_key">com.kenjitakahashirial.randomness.RANDOM_WORD_SETTINGS</string>
    <string name="random_word_settings_replacement">Uses replacement</string>
    <string name="random_word_settings_separator_label">Separator</string>
    <string name="random_word_settings_title">Random Word Settings</string>
    <string name="random_word_pool_label">Words to randomize</string>

    <string name="reset">Reset</string>

    <string name="roll_dice_name">Roll Dice</string>
    <string name="roll_dice_num_dice_label">Number of dice</string>
    <string name="roll_dice_num_faces_label">Number of faces</string>
    <string name="roll_dice_settings_key">com.kenjitakahashirial.randomness.ROLL_DICE_SETTINGS</string>
    <string name="roll_dice_settings_title">Roll Dice Settings</string>

    <string name="shared_preferences_key">com.kenjitakahashirial.randomness.SHARED_PREFERENCES</string>

    <string name="space">Space</string>

    <string name="valid_range_prompt">Please enter a valid range.</string>
</resources>
