<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/randomWordSettingsLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="false"
    android:focusableInTouchMode="false"
    android:clickable="false"
    tools:context=".activities.RandomWordSettingsActivity">

    <EditText
        android:id="@+id/randomWordSettingsWordPool"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="15dp"
        android:hint="@string/random_word_pool_label"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:gravity="center_horizontal"
        android:background="@drawable/rectangle_outline"
        android:layout_marginHorizontal="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/randomWordSettingsWordPoolLabel" />

    <RadioGroup
        android:id="@+id/randomWordSettingsSeparatorRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@id/randomWordSettingsNewlineRadioButton"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/randomWordSettingsSeparatorLabel">

        <RadioButton
            android:id="@+id/randomWordSettingsNewlineRadioButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/newline"
            android:textSize="15sp"
            android:layout_marginHorizontal="5dp" />

        <RadioButton
            android:id="@+id/randomWordSettingsCommaRadioButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/comma"
            android:textSize="15sp"
            android:layout_marginHorizontal="5dp" />

        <RadioButton
            android:id="@+id/randomWordSettingsSpaceRadioButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/space"
            android:textSize="15sp"
            android:layout_marginHorizontal="5dp" />
    </RadioGroup>

    <TextView
        android:id="@+id/randomWordSettingsSeparatorLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/random_word_settings_separator_label"
        android:textSize="20sp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/randomWordSettingsWordPoolLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/random_word_pool_label"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/randomWordSettingsSeparatorRadioGroup" />

    <CheckBox
        android:id="@+id/randomWordSettingsReplacement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/random_word_settings_replacement"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/randomWordSettingsWordPool" />
</androidx.constraintlayout.widget.ConstraintLayout>