<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/randomIntegerSettingsLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="false"
    android:focusableInTouchMode="false"
    android:clickable="false"
    tools:context=".activities.RandomIntegerSettingsActivity">

    <TextView
        android:id="@+id/randomIntegerSettingsFromLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:focusable="false"
        android:text="@string/random_integer_from_label"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/rollDiceSettingsNumDiceCircle"
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:importantForAccessibility="no"
        android:src="@drawable/circle_outline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/randomIntegerSettingsFromLabel"
        app:layout_constraintDimensionRatio="1:1" />

    <!-- TODO: Adjust text size for large values -->
    <EditText
        android:id="@+id/rollDiceNumDice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="5"
        android:hint="@string/random_integer_settings_from_hint"
        android:importantForAutofill="no"
        android:inputType="numberSigned"
        android:textSize="25sp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/rollDiceSettingsNumDiceCircle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rollDiceSettingsNumDiceCircle" />

    <CheckBox
        android:id="@+id/randomIntegerSettingsIncludeFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/random_integer_from_label"
        android:textSize="15sp"
        android:paddingHorizontal="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rollDiceSettingsNumDiceCircle" />
        
    <TextView
        android:id="@+id/rollDiceNumFacesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:focusable="false"
        android:text="@string/random_integer_to_label"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/randomIntegerSettingsIncludeFrom" />

    <ImageView
        android:id="@+id/rollDiceSettingsNumFacesCircle"
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:importantForAccessibility="no"
        android:src="@drawable/circle_outline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rollDiceNumFacesLabel"
        app:layout_constraintDimensionRatio="1:1" />

    <EditText
        android:id="@+id/rollDiceNumFaces"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="5"
        android:hint="@string/random_integer_settings_to_hint"
        android:importantForAutofill="no"
        android:inputType="numberSigned"
        android:textSize="25sp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/rollDiceSettingsNumFacesCircle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rollDiceSettingsNumFacesCircle" />

    <CheckBox
        android:id="@+id/randomIntegerSettingsIncludeTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/random_integer_to_label"
        android:textSize="15sp"
        android:paddingHorizontal="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rollDiceSettingsNumFacesCircle" />
</androidx.constraintlayout.widget.ConstraintLayout>